adjusted yotuube listview sizing to prevent distortion

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -950,7 +950,7 @@ body {
 
 .lImageImg {
   width: 100%;
-  /*height: 100%;*/
+  height: 100%;
   position: relative;
 }
 
